@@ -33,7 +33,7 @@ import junit.framework.TestSuite;
  * test getting timestamps from the database.
  *
  * @author Alin Sinpalean
- * @version $Id: TimestampTest.java,v 1.32.2.4 2009-08-14 09:04:38 ickzon Exp $
+ * @version $Id: TimestampTest.java,v 1.32.2.5 2009-08-20 19:44:04 ickzon Exp $
  */
 public class TimestampTest extends DatabaseTestCase {
     public TimestampTest(String name) {
@@ -2520,8 +2520,8 @@ public class TimestampTest extends DatabaseTestCase {
     }
 
     /**
-     * Test for bug [2181003], an attempt to set a BC date invalidates
-     * driver state.
+     * Test for bugs [2181003]/[2349058], an attempt to set a BC date
+     * invalidates driver state/DateTime allows invalid dates through.
      */
     public void testEra() throws SQLException {
         Statement st = con.createStatement();
@@ -2553,7 +2553,7 @@ public class TimestampTest extends DatabaseTestCase {
             gc.set(GregorianCalendar.DAY_OF_MONTH, 1);
             in.setDate(1, new Date(gc.getTime().getTime()));
 
-            assertTrue("invalid date should cause an exception",false);
+            assertTrue("invalid date should cause an exception", false);
         } catch( SQLException e ) {
             // expected error
         }
